ci: open sun.util.calendar for Groovy 2.5